feat: :sparkles: add delete user method
